--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": "CUDA",
-  "image": "nvidia/cuda:12.2.0-base-ubuntu22.04", 
+  "image": "nvidia/cuda:12.2.0-base-ubuntu22.04",
   "runArgs": [
     "--gpus", "device=0"
   ],
@@ -8,8 +8,12 @@
     "PATH": "${containerEnv:PATH}:/usr/local/cuda/bin",
     "LD_LIBRARY_PATH": "$LD_LIBRARY_PATH:/usr/local/cuda/lib64:/usr/local/cuda/extras/CUPTI/lib64",
     "XLA_FLAGS": "--xla_gpu_cuda_data_dir=/usr/local/cuda",
-    "WANDB_API_KEY": "${localEnv:WANDB_API_KEY}"
+    "WANDB_API_KEY": "${localEnv:WANDB_API_KEY}",
+    "UV_CACHE_DIR": "${workspaceFolder}/.cache/uv"
   },
+  "remoteUser": "root",
+  "containerUser": "root",
+  "updateRemoteUserUID": true,
   "updateContentCommand": "bash .devcontainer/setup-container.sh",
   "postStartCommand": "export PATH=$PATH:/root/.local/bin && uv sync --all-extras",
   "features": {
