--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,10 @@ benchmarl = [
     "wandb>=0.19.9",
     "id-marl-eval>=0.0.4",
 ]
+movingai = [
+    "numpy>=2.2.4",
+    "opencv-python>=4.11.0.86",
+]
 
 [build-system]
 requires = ["hatchling"]
