add custom free pos for the agent and goal generation in batched_string_grid; improve movingai to generate agents and goals only on free cells; refactor

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ benchmarl = [
     "id-marl-eval>=0.0.4",
 ]
 movingai = [
-    "numpy>=2.2.4",
+    "numpy<=1.26.4",
     "opencv-python>=4.11.0.86",
 ]
 
