--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,5 +57,6 @@ build-backend = "hatchling.build"
 dev = [
     "ipykernel>=6.29.5",
     "ipywidgets>=8.1.5",
+    "pytest>=8.3.5",
     "pyyaml>=6.0.2",
 ]
