--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ authors = [
 ]
 requires-python = ">=3.10"
 dependencies = [
-    "flax>=0.10.5",
-    "jax>=0.5.3",
+    "flax>=0.9.0",
+    "jax>=0.4.31",
 ]
 
 [project.scripts]
@@ -17,7 +17,18 @@ contmapf = "contmapf:main"
 
 [project.optional-dependencies]
 cuda12 = [
-    "jax[cuda12]>=0.5.3",
+    "jax[cuda12]>=0.4.31",
+]
+labmaze = [
+    "labmaze>=1.0.5",
+]
+movingai = [
+    "numpy>=1.24.0",
+    "opencv-python>=4.5.4.60",
+    "requests>=2.20.0",
+]
+matplotlib = [
+    "matplotlib>=3.10.1",
 ]
 torchrl = [
     "torchrl>=0.7.0",
@@ -29,24 +40,14 @@ baselines = [
     "tqdm>=4.67.1",
     "wandb>=0.19.9",
 ]
-matplotlib = [
-    "matplotlib>=3.10.1",
-]
-labmaze = [
-    "labmaze>=1.0.6",
-]
 benchmarl = [
-    "av<14",
+    "av<14.0.0",
     "torchrl>=0.7.0",
     "torchvision>=0.21.0",
     "tqdm>=4.67.1",
     "hydra-core>=1.3.2",
     "wandb>=0.19.9",
     "id-marl-eval>=0.0.4",
-]
-movingai = [
-    "numpy<=1.26.4",
-    "opencv-python>=4.11.0.86",
 ]
 
 [build-system]
@@ -57,6 +58,6 @@ build-backend = "hatchling.build"
 dev = [
     "ipykernel>=6.29.5",
     "ipywidgets>=8.1.5",
-    "pytest>=8.3.5",
+    "pytest>=8.0.0",
     "pyyaml>=6.0.2",
 ]
