--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
 ]
+license = "MIT"
+license-files = ["LICENSE"]
 
 dependencies = [
     "flax>=0.9.0",
