--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,12 @@ benchmarl = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[[tool.uv.index]]
+name = "testpypi"
+url = "https://test.pypi.org/simple/"
+publish-url = "https://test.pypi.org/legacy/"
+explicit = true
+
 [dependency-groups]
 dev = [
     "ipykernel>=6.29.5",
