--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,8 +5,14 @@ name: Run tests
 
 on:
   push:
+    paths:
+      - "src/**"
+      - "tests/**"
     branches: [ "main" ]
   pull_request:
+    paths:
+      - "src/**"
+      - "tests/**"
     branches: [ "main" ]
 
 jobs:
