--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -2,14 +2,14 @@ name: Run ruff check
 
 on:
   push:
-    # paths:
-    #   - "src/**"
-    #   - "tests/**"
+    paths:
+      - "src/**"
+      - "tests/**"
     branches: [ "main" ]
   pull_request:
-    # paths:
-    #   - "src/**"
-    #   - "tests/**"
+    paths:
+      - "src/**"
+      - "tests/**"
     branches: [ "main" ]
 
 jobs:
