--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -26,4 +26,4 @@ jobs:
         args: "--version"
     
     - name: Run ruff check
-      run: ruff check src/ tests/
+      run: ruff check --diff src/ tests/
