--- a/protocols/easy-medium/random_grid_h20_w20_a32_o20.yaml
+++ b/protocols/easy-medium/random_grid_h20_w20_a32_o20.yaml
@@ -1,11 +1,11 @@
 map_generator: "random_grid"
 dynamic: "HolonomicDynamic"
 lifelong: false
-window: null
+window: 0.3
 max_steps: 1000
 frameskip: 15
 max_obs: 3 # can be adjusted
-pos_shaping_factor: null
+pos_shaping_factor: 1.0 # can be adjusted
 dt: 0.01
 contact_force: 500
 contact_margin: 0.001
@@ -23,4 +23,3 @@ dynamic_kwargs:
   damping: 0.25
   mass: 1.0
   dt: 0.01
-  
