Add registry logic; update physical state create args
* fix config: remove dt

* add registration logic for maps and dynamics

* format readme; clear make_env

* format readme

* extend physical state creation; update tests; extend test_readme to test not only env init; extend workflows/tests to log timings

* updated readme - new custom physical state example

* format README.md

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -61,7 +61,7 @@ jobs:
       run: uv run -- python --version
 
     - name: Run tests
-      run: uv run pytest tests/ -v
+      run: uv run pytest tests/ -vv --durations=0
 
   # job for python 3.13 (for testing without labmaze)
   build-py313:
@@ -91,4 +91,4 @@ jobs:
       run: uv sync --locked --dev --extra movingai
 
     - name: Run tests
-      run: uv run pytest tests/ --ignore=tests/maps/test_labmaze_grid.py -v
+      run: uv run pytest tests/ --ignore=tests/maps/test_labmaze_grid.py -vv --durations=0
